# pyfastapi

./: .gitignore  README.md  pyproject.toml
application/: app_injector.py  main.py
core/: account_module.py  account_service.py
core/domains/: account.py
rest/: account_endpoints.py
rest/models/: common_models.py
