[project]
name = "pyfastapi"
version = "0.1.0"
description = "Microservice Api framework FastApi"
authors = [
    {name = "Dipesh Mistry",email = "dipu86in@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
