[project]
name = "pyfastapi"
version = "0.1.0"
description = "Microservice Api framework FastApi"
authors = [
    {name = "Dipesh Mistry",email = "dipu86in@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)",
    "injector (>=0.24.0,<0.25.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]
entrypoint = "application.main:app"